tests/transpiler/x/scala/query_sum_select.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/query_sum_select.scala:6: error: value sum is not a member of Int
    val result: ArrayBuffer[Any] = ({ var _res = ArrayBuffer[Any]() ; for (n <- nums) { if (n > 1) { _res.append(n.sum) } }; _res })
                                                                                                                   ^
one error found
