tests/transpiler/x/scala/query_sum_select.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:42:59 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    val nums: ArrayBuffer[Int] = ArrayBuffer(1, 2, 3)
    val result: ArrayBuffer[Any] = ({ var _res = ArrayBuffer[Any]() ; for (n <- nums) { if (n > 1) { _res.append(n.sum) } }; _res })
    println(result)
  }
}
